2007-03-24  Jason Rumney  <jasonr@gnu.org>

	* autorevert.el (find-file-hook, auto-revert-tail-mode):
	Use file size in bytes for auto-revert-tail-pos not characters.

2007-03-24  Thien-Thi Nguyen  <ttn@gnu.org>

	* vc-rcs.el (vc-rcs-annotate-command):
	Set text property :vc-annotate-prefix on the annotation text.
	(vc-rcs-annotate-time): Instead of searching for ": ",
	search for end of text propertized with :vc-annotate-prefix.

2007-03-24  Martin Rudalics  <rudalics@gmx.at>

	* whitespace.el (top level): Remove calls putting
	permanent-local nil property since these are no-ops.

	* man.el (Man-support-local-filenames): Assure that
	default-directory exists when doing call-process.

2007-03-23  David Vazquez  <xeos00@gmail.com>  (tiny change)

	* progmodes/m4-mode.el (m4-m4-buffer, m4-m4-region): Fix
	omission bug: Use m4-program-options to construct shell command.

2007-03-23  David Kastrup  <dak@gnu.org>

	* progmodes/cc-mode.el (c-make-emacs-variables-local): Use
	`mapcar' rather than `mapcan' to silence compiler warning.

2007-03-22  Ralf Angeli  <angeli@caeruleus.net>

	* textmodes/reftex.el: Add maintainer address.

	* textmodes/reftex-vars.el: Add maintainer address.

	* textmodes/reftex-toc.el: Add maintainer address.

	* textmodes/reftex-sel.el: Add maintainer address.

	* textmodes/reftex-ref.el: Add maintainer address.

	* textmodes/reftex-parse.el: Add maintainer address.

	* textmodes/reftex-index.el: Add maintainer address.

	* textmodes/reftex-global.el: Add maintainer address.

	* textmodes/reftex-dcr.el: Add maintainer address.

	* textmodes/reftex-cite.el: Add maintainer address.

	* textmodes/reftex-auc.el: Add maintainer address.

2007-03-22  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-agenda-mode, org-table-edit-formulas):
	Make sure that `global-font-lock-mode' does not turn on font-lock
	in these buffers.

2007-03-21  Kim F. Storm  <storm@cua.dk>

	* xt-mouse.el (xt-mouse-epoch): New variable.